# asm-shader-toy

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: pages.yml
docs/: assembly.md  coolconsts.md  expansions.md  gpu-web-plan.md  hacker-news-post.md  inputs.md  language-roadmap.md  native-webgpu.md  performance.md  scope.md
examples/: README.md  image_passthrough.asm  mouse_rings.asm  multi_image_mix.asm  planet_sphere.asm  plasma.asm  time_pulse.asm
examples/assets/: bars.ppm  checker.ppm
examples/assets/video/: README.md
examples/audio/: audio_scope.asm
examples/basics/: consts.asm  plasma.asm  subroutines.asm  time_pulse.asm
examples/buffers/: life_buffer.asm  life_display.asm  ramp_buffer.asm  ramp_display.asm
examples/common/: math.inc  screen.inc
examples/input/: live_controls.asm
examples/microphone/: README.md  mic_scope.asm
examples/multifile/: main.asm  palette.inc  rings.inc
examples/perf/: heavy.asm
examples/raymarch/: pixelated_planet.asm  planet_sphere.asm
examples/std/: aliases.inc  screen.inc
examples/textures/: multi_image_mix.asm  noise_field.asm
examples/video/: README.md  channel_metadata.asm  future_video_channel.asm  poster_edges.asm  video_channel.asm  video_texel.asm
examples/webcam/: README.md  webcam_channel.asm
include/ast/: assembler.hpp  ir.hpp  runtime.hpp  vm_executor.hpp  wgsl.hpp
scripts/: build_webgpu_probe.sh  run.sh  validate_examples.sh  validate_webgpu_frame.sh
src/: assembler.cpp  ir.cpp  main.cpp  native_webgpu_frame.cpp  native_webgpu_probe.cpp  native_webgpu_runner.cpp  native_webgpu_surface_probe.cpp  runtime.cpp  wgsl.cpp
stdlib/std/: screen.inc
tests/: core_tests.cpp
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/public/: about.html
web/scripts/: open_chrome_webgpu.sh
web/src/: asmEditor.ts  compiler.test.ts  compiler.ts  main.ts  nativeParity.test.ts  noise.test.ts  noise.ts  project.test.ts  project.ts  styles.css  templates.test.ts  templates.ts  webgl.ts  webgpu.ts
